--- a/contact.html
+++ b/contact.html
@@ -3,56 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - Bootstrap Task</title>
+  <title>Nexus | Contact</title>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { font-family: 'Plus Jakarta Sans', sans-serif; background: #fdfdfd; }
+    .navbar { background: white !important; border-bottom: 1px solid #eee; }
+    .contact-card { border: none; border-radius: 32px; box-shadow: 0 40px 100px -20px rgba(0,0,0,0.1); padding: 50px; background: white; }
+    .form-control { border: 1.5px solid #e2e8f0; padding: 15px; border-radius: 12px; background: #f8fafc; transition: 0.3s; }
+    .form-control:focus { border-color: #10b981; background: white; box-shadow: 0 0 0 4px rgba(16, 185, 129, 0.1); }
+    .btn-emerald { background: #10b981; color: white; border: none; padding: 16px; border-radius: 12px; font-weight: 700; width: 100%; }
+  </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">My Project</a>
-      <div class="navbar-nav">
+      <a class="navbar-brand fw-bold" href="index.html">NEXUS.</a>
+      <div class="navbar-nav ms-auto">
         <a class="nav-link" href="index.html">Home</a>
         <a class="nav-link" href="about.html">About</a>
-        <a class="nav-link active" href="contact.html">Contact</a>
+        <a class="nav-link active text-primary fw-bold" href="contact.html">Contact</a>
       </div>
     </div>
   </nav>
 
-  <!-- Contact Form -->
-  <div class="container my-5">
+  <div class="container my-5 py-5">
     <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card shadow">
-          <div class="card-body">
-            <h2 class="text-center mb-4">Contact Us</h2>
-            <form>
-              <div class="mb-3">
-                <label class="form-label">Name</label>
-                <input type="text" class="form-control" placeholder="Your Name">
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Email address</label>
-                <input type="email" class="form-control" placeholder="name@example.com">
-              </div>
-              <div class="mb-3">
-                <label class="form-label">Message</label>
-                <textarea class="form-control" rows="4"></textarea>
-              </div>
-              <button type="submit" class="btn btn-primary w-100">Send Message</button>
-            </form>
+      <div class="col-lg-7">
+        <div class="contact-card">
+          <div class="text-center mb-5">
+            <h2 class="fw-800 display-6 mb-3">Get in Touch</h2>
+            <p class="text-muted">Need technical support or a custom enterprise quote? Our engineers are ready to help.</p>
           </div>
+          <form>
+            <div class="row g-3">
+                <div class="col-md-6 mb-3"><input type="text" class="form-control" placeholder="First Name"></div>
+                <div class="col-md-6 mb-3"><input type="email" class="form-control" placeholder="Email Address"></div>
+            </div>
+            <div class="mb-4"><textarea class="form-control" rows="5" placeholder="Project details or question..."></textarea></div>
+            <button type="submit" class="btn btn-emerald">Submit Request</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2026 My Project. All rights reserved.</p>
-  </footer>
-
+  <footer class="bg-dark py-4 text-center text-white-50 small mt-5">&copy; 2026 Nexus Enterprise</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
