--- a/about.html
+++ b/about.html
@@ -3,71 +3,64 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About Us - Bootstrap Task</title>
+  <title>Nexus | About</title>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body { font-family: 'Plus Jakarta Sans', sans-serif; }
+    .navbar { background: white !important; border-bottom: 1px solid #eee; }
+    .section-title { position: relative; display: inline-block; padding-bottom: 10px; margin-bottom: 30px; }
+    .section-title::after { content: ''; position: absolute; left: 0; bottom: 0; width: 60px; height: 4px; background: #10b981; border-radius: 2px; }
+    .accordion-item { border: none; background: #f8fafc; margin-bottom: 1rem; border-radius: 16px !important; }
+    .accordion-button { background: transparent !important; font-weight: 600; padding: 20px; box-shadow: none !important; }
+  </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg sticky-top">
     <div class="container">
-      <a class="navbar-brand" href="index.html">My Project</a>
-      <div class="navbar-nav">
+      <a class="navbar-brand fw-bold" href="index.html">NEXUS.</a>
+      <div class="navbar-nav ms-auto">
         <a class="nav-link" href="index.html">Home</a>
-        <a class="nav-link active" href="about.html">About</a>
+        <a class="nav-link active fw-bold text-primary" href="about.html">About</a>
         <a class="nav-link" href="contact.html">Contact</a>
       </div>
     </div>
   </nav>
 
-  <!-- About Section -->
-  <div class="container my-5">
-    <div class="row align-items-center">
+  <div class="container my-5 py-5">
+    <div class="row g-5 align-items-center">
       <div class="col-md-6">
-        <h2>About Our Mission</h2>
-        <p>We are learning to build modern, responsive UIs using Bootstrap 5. This project focuses on component synergy and clean design.</p>
+        <h2 class="section-title fw-800 display-5">Our Engineering Philosophy</h2>
+        <p class="text-muted fs-5">We are a team of architects building the next generation of cloud infrastructures. Our focus is on removing friction from the development lifecycle.</p>
+        <p class="text-muted mb-4">By leveraging modern tools like Bootstrap 5, we ensure that performance and beauty go hand in hand.</p>
+        <div class="row mt-4">
+            <div class="col-6"><h3 class="fw-bold">99.9%</h3><p class="small text-muted">Uptime Guaranteed</p></div>
+            <div class="col-6"><h3 class="fw-bold">24/7</h3><p class="small text-muted">Expert Support</p></div>
+        </div>
       </div>
       <div class="col-md-6">
-        <img src="https://via.placeholder.com/500x300" class="img-fluid rounded shadow" alt="About Image">
+        <img src="https://images.unsplash.com/photo-1551434678-e076c223a692?auto=format&fit=crop&w=600&q=80" class="img-fluid rounded-5 shadow-lg" alt="Team Work">
       </div>
     </div>
   </div>
 
-  <!-- Accordion -->
-  <div class="container my-5">
-    <div class="accordion" id="aboutAccordion">
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingOne">
-          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne">
-            Our Vision
-          </button>
-        </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show">
-          <div class="accordion-body">
-            We aim to create modern, responsive websites with Bootstrap.
-          </div>
+  <div class="bg-light py-5">
+    <div class="container py-4">
+        <div class="accordion" id="faq">
+            <div class="accordion-item shadow-sm">
+                <h2 class="accordion-header"><button class="accordion-button" data-bs-toggle="collapse" data-bs-target="#a1">Global Scalability</button></h2>
+                <div id="a1" class="accordion-collapse collapse show"><div class="accordion-body">Deploy code to edges across the globe instantly.</div></div>
+            </div>
+            <div class="accordion-item shadow-sm">
+                <h2 class="accordion-header"><button class="accordion-button collapsed" data-bs-toggle="collapse" data-bs-target="#a2">Developer Experience</button></h2>
+                <div id="a2" class="accordion-collapse collapse"><div class="accordion-body">Intuitive CLI tools and rich documentation for rapid onboarding.</div></div>
+            </div>
         </div>
-      </div>
-      <div class="accordion-item">
-        <h2 class="accordion-header" id="headingTwo">
-          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo">
-            Our Values
-          </button>
-        </h2>
-        <div id="collapseTwo" class="accordion-collapse collapse">
-          <div class="accordion-body">
-            Creativity, clarity, and clean design are at the core of our work.
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center py-3">
-    <p>&copy; 2026 My Project. All rights reserved.</p>
-  </footer>
-
+  <footer class="bg-dark py-4 text-center text-white-50 small">&copy; 2026 Nexus Enterprise</footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
